--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,4 +5,7 @@
 body {
   background: var(--background);
   font-family: var(--font-nunito), Arial, Helvetica, sans-serif;
+  font-synthesis: none;
+  line-height: inherit;
+  margin: 0;
 }
